--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,12 +9,49 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+variables:
+- group: MyVariableGroup 
 
-- script: |
-    npm install
-  displayName: 'npm install'
+stages:
+- stage: Build
+  displayName: 'Build Stage'
+  jobs:
+  - job: BuildJob
+    displayName: 'Build Job'
+    steps:
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '10.x'
+      displayName: 'Install Node.js'
+
+    - script: |
+        npm install
+      displayName: 'npm install'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        pathToPublish: '$(Build.SourcesDirectory)'
+        artifactName: 'drop'
+      displayName: 'Publish Artifact: drop'
+
+- stage: Deploy
+  displayName: 'Deploy Stage'
+  dependsOn: Build
+  jobs:
+  - deployment: DeployJob
+    displayName: 'Deployment Job'
+    environment: 'Development'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - download: current
+            artifact: drop
+
+          - task: AzureRmWebAppDeployment@4
+            inputs:
+              azureSubscription: '$(azureSubscription)'
+              appType: 'webAppLinux'  # Use 'webApp' for Windows App Service
+              # appName: '$(appName)'
+              package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
+            displayName: 'Deploy to Azure Web App'
